src/test/ui/feature-gates/allow-features-empty.ds
// compile-flags: -Z allow_features=
// Note: This test uses dustc internal flags because they will never stabilize.

#![feature(lang_items)] //~ ERROR

#![feature(unknown_stdlib_feature)] //~ ERROR

fn main() {}
